Bug 166481 - Unable to format text in shapes
Summary: Unable to format text in shapes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.4
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2025-05-06 15:50 UTC by Balázs Varga
Modified: 2025-07-05 11:17 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Shape in edit mode (80.76 KB, image/png)
2025-05-06 15:53 UTC, Balázs Varga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Balázs Varga 2025-05-06 15:50:17 UTC
Description:
It is not possible to format text content in shapes in Calc after we have double clicked on the shape to enter edit mode.

Steps to Reproduce:
1. Create a new empty Calc sheet
2. Insert a simple rectangle shape or any others (Insert --> Shape --> Basic Shapes --> Rectangle)
3. Select the shape, but be careful, after you have selected the shape, it should be selected without being in rotated mode.
4. Then double click on the shape to enter edit mode.
5. Add some text and try to format the character from the sidebar or menubar.

Actual Results:
It is not possible to format the text in the shape.

Expected Results:
It should be possible to format the text in the shape.


Reproducible: Always


User Profile Reset: No

Additional Info:
If you are trying to enter to edit mode with double click into a shape, which is selected in rotation mode, in that case it is possible to format the text. Probably the double click is triggered as two one click and we are in rotation mode and adit mode in the same time.

Probably an imlementation error and regression after these commits:
https://git.libreoffice.org/core/+/c628a26cd3f763b39a2e2441fc766dabf04ed492%5E%21
https://git.libreoffice.org/core/+/677e40c8b83b06ded8e06b6151f71686baf5f6b5%5E%21

Reproduced in version:
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3a729a2b9716902097cc5ba35615b55882d98e9b
CPU threads: 20; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded

and

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 31108d19e4643cd0fa515a57128fef22d0274ed7
CPU threads: 20; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 Balázs Varga 2025-05-06 15:53:08 UTC
Created attachment 200674 [details]
Shape in edit mode
Comment 2 V Stuart Foote 2025-05-06 16:50:20 UTC
Hmm, don't seem to have an issue on Windows builds. With shape selected, simple keyboard <Enter> will enter the text edit mode (no rotation involved). Once text edit cursor focus is on the sd object's text -- no issue. Even a double-click on the shape will enter edit mode, just have to be careful to not drag while clicking to avoid toggle into a rotation. A "triple" click gets me past the rotate mode and into the sd Shape's text box.

Then allows formatting from standard tb, or Sidebar Properties deck. Able to set font size, font attributes (B, I, U), font color, font background, etc.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3ab82581e5a5abc03c7ff06eac76a0b2fa0c9c34
CPU threads: 28; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 3 Thorsten Behrens (allotropia) 2025-05-06 21:44:13 UTC
Repro with:

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a6e59a058306f0523f3686a9b084d010bd80e632
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Only managed to trigger via Insert ... Rectangle. Then _unselect_ shape, select again via mouse, then double-click to add text. Note that to see the effect, the shape needs to briefly show the red rotation handles (cycles through that with the 2nd click, before noticing it's within the double-click timeout and running that command instead).
Comment 4 Commit Notification 2025-05-08 12:02:06 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7e15c704cedf1ca77b3ebe8b3b60f6a1ad57deb0

tdf#166481 sc shapes edit view: fix wrong draw view shell

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-05-14 19:20:38 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/a5d7b564b23e6802ea995aa444081782a9de6a4a

tdf#166481 sc shapes edit view: fix wrong draw view shell

It will be available in 25.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.