tdf#166481 sc shapes edit view: fix wrong draw view shell

was created when an object was in rotation drag mode and we
enter into the shape to text edit mode.
We only need to switch to draw shell if we have not already
created a text shell for text edit mode.

TODO: unit/UI tests would be useful for the original enhancement.
(c628a26cd3f763b39a2e2441fc766dabf04ed492)

Follow-up commit of
c628a26cd3f763b39a2e2441fc766dabf04ed492
677e40c8b83b06ded8e06b6151f71686baf5f6b5

Regression from commit: c628a26cd3f763b39a2e2441fc766dabf04ed492
(tdf#90293 switch draw selection to rotate mode)

Change-Id: Ib857673b1f5469d6502736ecad84fe046f8c967e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185031
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
(cherry picked from commit 7e15c704cedf1ca77b3ebe8b3b60f6a1ad57deb0)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185052
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>